<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Clevertel VoIP</string>

    <!-- Permissions -->
    <string name="permgrouplab_microphone">Microphone</string>
    <string name="permgroupdesc_microphone">record audio</string>
    <string name="permlab_recordAudio">record audio</string>
    <string name="permdesc_recordAudio">Allows the app to record audio with the microphone. This permission allows the app to record audio at any time without your confirmation.</string>
    <string name="permgrouplab_camera">Camera</string>
    <string name="permgroupdesc_camera">take pictures and record video</string>
    <string name="permlab_camera">take pictures and videos</string>
    <string name="permdesc_camera">Allows the app to take pictures and videos with the camera. This permission allows the app to use the camera at any time without your confirmation.</string>
    <string name="permissions_needed">Allows the app to record audio and use the camera</string>

    <string name="str_login">Login</string>
    <string name="str_numpad">Dialpad</string>
    <string name="str_video">Video</string>
    <string name="str_message">Message</string>
    <string name="str_setting">Setting</string>

    <!-- Login screen -->
    <string name="str_username">Username</string>
    <string name="str_password">Password</string>
    <string name="str_displayname">Display Name</string>
    <string name="str_authName">Auth Name</string>
    <string name="str_userDomain">Domain</string>
    <string name="str_optional">Optional</string>
    <string name="str_requried">Required</string>
    <string name="str_transport">Transport</string>
    <string name="str_srtp">SRTP</string>
    <string name="str_SIPServer">SIP Server</string>
    <string name="str_SIPServerPort">SIP Port</string>
    <string name="str_StunServer">STUN Server</string>
    <string name="str_StunServerPort">STUN Port</string>
    <string name="str_localSIPPort">Local SIP Port</string>
    <string name="str_localSIPIP">Local IP</string>
    <string name="str_sign_in">Sign In</string>
    <string name="str_sign_out">Sign Out</string>

    <string-array name="transports">
        <item>UDP</item>
        <item>TLS</item>
        <item>TCP</item>
    </string-array>

    <string-array name="lines">
        <item>Line-0</item>
        <item>Line-1</item>
        <item>Line-2</item>
        <item>Line-3</item>
    </string-array>

    <string-array name="srtp">
        <item>None</item>
        <item>Force</item>
        <item>Prefer</item>
    </string-array>

    <string name="outboundServer">outboundServer</string>
    <string name="outboundServerPort">outboundServerPort</string>
    <string name="register">Sign In</string>
    <string name="unregister">Sign Out</string>
    <string name="registed">Online</string>
    <string name="not_reg">Offline</string>

    <!-- NumPad -->
    <string name="str_videocall">Video Call</string>
    <string name="str_acceptvideo">Accept Video</string>
    <string name="str_conference">Conference</string>
    <string name="str_dial">Dial</string>
    <string name="str_vcall">Video Call</string>
    <string name="str_acall">Audio Call</string>
    <string name="str_del">Del</string>
    <string name="str_hold">Hold</string>
    <string name="str_unhold">UnHold</string>
    <string name="str_reject">Reject</string>
    <string name="str_att_transfer">Attended Transfer</string>
    <string name="str_transfer">Transfer</string>
    <string name="str_hangup">Hangup</string>
    <string name="str_speakon">Speaker</string>
    <string name="str_refer">Refer</string>
    <string name="str_mute">Mute</string>
    <string name="str_answer">Answer</string>

    <!-- Message -->
    <string name="subscribe">Subscribe</string>
    <string name="unsubscribe">Unsubscribe</string>
    <string name="publish">Publish</string>
    <string name="unpublish">Unpublish</string>
    <string name="str_sendmsg">Send</string>
    <string name="str_sendsdp">Send SDP</string>
    <string name="str_confrence">Conference</string>
    <string name="str_setstatus">Set</string>
    <string name="str_status">Status:</string>
    <string name="str_clear">Clear</string>
    <string name="str_update">Subscribe</string>
    <string name="str_accept">Accept</string>
    <string name="str_refuse">Refuse</string>
    <string name="str_sendto">Send to:</string>
    <string name="contact">Contact</string>
    <string name="message">Message</string>
    <string name="sipsample">Clevertel VoIP</string>
    <string name="online">Online</string>
    <string name="offline">Offline</string>
    <string name="website">www.clevertel.co.za</string>
    <string name="email">support@clevertel.co.za</string>
    <string name="audio">Audio</string>
    <string name="video">Video</string>
    <string name="str_tips">..</string>
    <string name="line">line-</string>

    <!-- Codec / media settings keys -->
    <string name="MEDIA_G722">MEDIA_G722</string>
    <string name="MEDIA_G729">MEDIA_G729</string>
    <string name="MEDIA_AMR">MEDIA_AMR</string>
    <string name="MEDIA_AMRWB">MEDIA_AMRWB</string>
    <string name="MEDIA_GSM">MEDIA_GSM</string>
    <string name="MEDIA_PCMA">MEDIA_PCMA</string>
    <string name="MEDIA_PCMU">MEDIA_PCMU</string>
    <string name="MEDIA_SPEEX">MEDIA_SPEEX</string>
    <string name="MEDIA_SPEEXWB">MEDIA_SPEEXWB</string>
    <string name="MEDIA_ILBC">MEDIA_ILBC</string>
    <string name="MEDIA_ISACWB">MEDIA_ISACWB</string>
    <string name="MEDIA_ISACSWB">MEDIA_ISACSWB</string>
    <string name="MEDIA_G7221">MEDIA_G7221</string>
    <string name="MEDIA_OPUS">MEDIA_OPUS</string>
    <string name="MEDIA_DTMF">MEDIA_DTMF</string>
    <string name="string_audiofeature">Audio Features</string>
    <string name="MEDIA_VAD">MEDIA_VAD</string>
    <string name="MEDIA_AEC">MEDIA_AEC</string>
    <string name="MEDIA_ANS">MEDIA_ANS</string>
    <string name="MEDIA_AGC">MEDIA_AGC</string>
    <string name="MEDIA_CNG">MEDIA_CNG</string>
    <string name="string_video">Video</string>
    <string name="MEDIA_H264">MEDIA_H264</string>
    <string name="MEDIA_VP8">MEDIA_VP8</string>
    <string name="MEDIA_VP9">MEDIA_VP9</string>
    <string name="VIDEO_NACK">VIDEO_NACK</string>
    <string name="str_resolution_title">Select Resolution</string>
    <string name="str_resolution">Resolution</string>
    <string name="str_resolution_default">CIF</string>
    <string-array name="arr_resolution">
        <item>QCIF</item>
        <item>CIF</item>
        <item>VGA</item>
        <item>720P</item>
        <item>1080P</item>
    </string-array>
    <string name="str_bitrate">Bitrate</string>
    <string name="str_avpath">Audio and Video recording</string>
    <string name="str_avpathtitle">Record file directory</string>
    <string name="str_avpathkey">AVpath</string>
    <string name="str_forward">Forward</string>
    <string name="str_fwopentitle">Enable call forward</string>
    <string name="str_fwopenkey">ForwardEnable</string>
    <string name="str_fwtotitle">Forward call to:</string>
    <string name="str_fwtokey">Forwardto</string>
    <string name="str_fwbusytitle">Forward when busy</string>
    <string name="str_fwbusykey">ForwardBusy</string>
    <string name="str_prack">PRACK</string>
    <string name="str_pracktitle">Enable PRACK</string>

    <!-- Clevertel specific -->
    <string name="str_reconnecting">Reconnecting…</string>
    <string name="clevertel_sip_domain">sip.clevertel.co.za</string>
    <string name="notification_channel_name">Clevertel VoIP Service</string>
    <string name="notification_call_title">Incoming Call</string>
    <string name="service_running">Clevertel VoIP running in background</string>
</resources>
